base/CART.yaml
  apiVersion: apps/v1  
  kind: Deployment
  metadata:
    name: retail-store-cart
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: retail-store-cart
    template:
      metadata:
        labels:
          app: retail-store-cart
      spec:
        containers:
        - name: cart
          image: public.ecr.aws/aws-containers/retail-store-sample-cart:1.6.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 100
            periodSeconds: 5
            failureThreshold: 5
          readinessProbe:           
            httpGet:
              path: /actuator/health
              port: 8080  
            initialDelaySeconds: 100
            periodSeconds: 5
            failureThreshold: 5

          securityContext:
           capabilities:
            add:
              - NET_BIND_SERVICE
            drop:
              - ALL
           readOnlyRootFilesystem: true 
           allowPrivilegeEscalation: false 
          ports:
          - containerPort: 8080
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
        volumes:
         - name: tmp-volume
           emptyDir:
            medium: Memory        
                  
          
          
---

apiVersion: v1
kind: Service
metadata:
  name: retail-store-service-cart
  labels:
    app: retail-store-cart
spec:
  selector:
    app: retail-store-cart
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
