base/CATALOG.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-store-catalog
  labels:
    app: retail-store-catalog
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: retail-store-catalog
  template:
    metadata:
      labels:
        app: retail-store-catalog
    spec:
      restartPolicy: Always
      containers:
      - name: catalog
        image: public.ecr.aws/aws-containers/retail-store-sample-catalog:1.6.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "150m"
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 8080
        securityContext:
         capabilities:
          drop:
            - ALL
         allowPrivilegeEscalation: false           
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: retail-store-service-catalog
  labels:
    app: retail-store-catalog
spec:
  selector:
    app: retail-store-catalog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
