base/UI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-store-ui
  labels:
    app: retail-store-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-store-ui
  template:
    metadata:
      labels:
        app: retail-store-ui
    spec:
      containers:
      - name: ui
        image: public.ecr.aws/aws-containers/retail-store-sample-ui:1.6.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "150m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        ports:
        - containerPort: 8080
        securityContext:
          capabilities:
            drop: 
              - ALL       
        startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 45 
            periodSeconds: 10
            failureThreshold: 12
        readinessProbe:           
            httpGet:
              path: /actuator/health
              port: 8080  
            initialDelaySeconds: 45
            periodSeconds: 10
            failureThreshold: 12
        volumeMounts:
          - name: ui-pvc
            mountPath: /data
      volumes:
        - name: ui-pvc
          persistentVolumeClaim:
            claimName: retail-store-ui-pvc       
---
apiVersion: v1
kind: Service
metadata:
  name: retail-store-ui-service
  labels:
    app: retail-store-ui
spec:
  type: ClusterIP
  selector:
    app: retail-store-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
 # volumeMounts:
 #       - mountPath: "/data"
 #         name: ebs-volume
 #     volumes:
 #     - name: ebs-volume
 #       persistentVolumeClaim:
 #         claimName: ebs-pvc
