base/checkou_redis_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-deployment
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9121"
spec:
  selector:
    matchLabels:
      app: checkout-redis
  
  replicas: 1
  template:
    metadata:
      labels:
        app: checkout-redis
    spec:
      restartPolicy: Always
      containers:
      - name: redis
        image: redis:6.0-alpine
        ports:
        - containerPort: 6379
          name: redis
        
        resources:
          requests:
            memory: 300Mi
            cpu: 250m
          limits:
            memory: 600Mi
            cpu: 500m  
        startupProbe:
          exec:
            command:
              - redis-cli
              - ping
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 6
        livenessProbe:
          exec:
            command:
              - redis-cli
              - ping
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 6 
        readinessProbe:
          exec:
            command:
              - redis-cli
              - ping
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 6
      - name: redis-exporter
        image: oliver006/redis_exporter:v1.58.0
        ports:
          - containerPort: 9121
            name: metrics
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-service-redis
  labels:
    app: checkout-redis
spec:
  selector:
    app: checkout-redis
  ports:
    - name: redis 
      protocol: TCP
      port: 6379
      targetPort: 6379

    - name: metrics
      protocol: TCP
      port: 9121
      targetPort: 9121
