base/checkout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-store-deployment-checkout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-store-checkout
  template:
    metadata:
      labels:
        app: retail-store-checkout
    spec:     
      restartPolicy: Always
      containers:
        - name: checkout
          image: public.ecr.aws/aws-containers/retail-store-sample-checkout:1.6.1
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent  
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
                memory: "256Mi"
                cpu: "200m"
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 45 
            periodSeconds: 5
            failureThreshold: 5
          readinessProbe:           
            httpGet:
              path: /health
              port: 8080  
            initialDelaySeconds: 45
            periodSeconds: 5
            failureThreshold: 5

          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            allowPrivilegeEscalation: false              
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory        

           
        
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
  labels:
    app: retail-store-checkout
spec:
  selector:
    app: retail-store-checkout
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
