base/opensearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-deployment
spec:
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:   
      restartPolicy: Always
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:3.5.0
        resources:
          requests:
            memory: "1Gi"
            cpu: "300m"
          limits:
            memory: "1Gi"
            cpu: "600m"
        ports:
        - name: performance
          containerPort: 9600
        - name: http  
          containerPort: 9200
        startupProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
            initialDelaySeconds: 100
            periodSeconds: 5
            failureThreshold: 12
        readinessProbe:           
            httpGet:
              path: /_cluster/health
              port: 9200  
            initialDelaySeconds: 100
            periodSeconds: 5
            failureThreshold: 12

        volumeMounts:
          - name: opensearch-data
            mountPath: /usr/share/opensearch/data
      volumes:
          - name: opensearch-data
            persistentVolumeClaim:
               claimName: opensearch-data
             
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-service
spec:
  selector: 
    app: opensearch
  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: 9200
    - name: performance
      protocol: TCP
      port: 9600
      targetPort: 9600
  type: ClusterIP
