base/rabbitmq_sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  serviceName: rabbitmq-service
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1Gi"
            cpu: "150m"
          limits:
            memory: "2Gi"
            cpu: "300m"
        ports:
        - containerPort: 5672
          name: amqp
        - containerPort: 15672
          name: management
        - containerPort: 15692
          name: metrics
        volumeMounts:
         - name: rabbitmq-data
           mountPath: /var/lib/rabbitmq
         - name: plugins-config
           mountPath: /etc/rabbitmq/enabled_plugins
           subPath: enabled_plugins
        startupProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 40
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 20 
        securityContext:
          allowPrivilegeEscalation: false
      volumes:
        - name: plugins-config
          emptyDir: {}
  volumeClaimTemplates:
      - metadata:
          name: rabbitmq-data
        spec:
          accessModes: [ "ReadWriteOnce" ]  
          storageClassName: "standard"
          resources:
            requests:
              storage: 1Gi     
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  clusterIP: None
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: management
    port: 15672
    targetPort: 15672
  - name: metrics
    port: 15692
    targetPort: 15692
