base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "demo-store"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retail-store-ui-service
                port:
                  number: 8080
